chore: enhanced tests